--- a/index.html
+++ b/index.html
@@ -9,5 +9,9 @@
   <body class="bg-[#00042B]">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
   </body>
 </html>
